--- a/vibez/app/views/layouts/application.html.erb
+++ b/vibez/app/views/layouts/application.html.erb
@@ -4,10 +4,23 @@
   <title>Vibez</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div ng-app="">
+ 
+<p>Input something in the input box:</p>
+<p>Name: <input type="text" ng-model="name"></p>
+<h1>The input is: {{name}}</h1>
 
+</div>
+
+<div ng-contorller="UserController as user">
+	<h2 ng-bind="user.name">h2</h2>
+	<button ng-click="user.changeName('Bonnie')">Click meee</button>
+	<input ng-model="user.name">	
+</div>
 <%= yield %>
 
 </body>
