--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -1,41 +1,17 @@
+<div class="logo">
+  <h1>V-BOARD</h1>
+    <p>share the sound to your vibe</p>
+  <div class="ball"></div>
+  <div class="ball2"></div>
+</div>
+
+
+<div ng-view >
+<!-- angular templates -->
+</div>
+
 <% if flash[:message] %>
   <div class="alert">
     <%= flash[:message] %>
   </div>
-<% end %>
-
-<h1> Welcome to vibez </h1>
-<h1>This is main Page of welcome.html.erb <%= current_user.username unless current_user.blank? %></h1>
-
-<h3>Please log in</h3>
-
-<form action="<%= session_path %>" method="POST">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
-
-  <input type="email" name="user[email]" placeholder="your email address"> </br>
-  <input type="password" name="user[password]" placeholder="desired password"> </br>
-  <input type="submit" value="Log in">
-</form>
-
-
-<h3>Please sign up</h3>
-
-<form action="<%= users_path %>" method="POST">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-
-  <input type="username" name="user[username]" placeholder="pick a username"> </br>
-  <input type="email" name="user[email]" placeholder="your email address">
-  </br>
-  <input type="password" name="user[password]" placeholder="desired password"> </br>
-  <input type="submit" value="Sign up">
-</form>
-
-<% if current_user %>
-<hr/>
-<form action="<%= session_path %>" method="POST">
-  <input type="hidden" name="authenticity_token"
-    value="<%= form_authenticity_token %>">
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Log Out!">
-</form>
 <% end %>
